--- a/index.html
+++ b/index.html
@@ -22,27 +22,21 @@ Main categories:
 </p>
 </div>
 
+<h3>Browse by Category</h3>
 
-
-<div class="grid">
-<a name="search"></a>
-		<div class = "col-half">
-    {% include email-box.html message="Sign up for updates" style="max-width: 17.5em" %}
-    <br>
-
-    
-
-    </div>
-    
-		<div class = "col-half">
-
-    {% include search-box.html %}
-
-
-Or view <a href="/datasets/">a list of all datasets</a>.
-
+<div class="homepage-categories">
+{% for category in site.data.categories %}
+  {% if category.featured == true %}
+    {% capture logo_alt %}{{ category.name }}{% if category.logo_credit and category.logo_credit != empty %} logo by {{ category.logo_credit }}{% endif %}{% endcapture %}
+    <a href="{{ site.baseurl }}/datasets/?category={{ category.name | slugify }}" class="thumbnail" title="{{ logo_alt }}">
+      {% if category.logo and category.logo != empty %}
+        <img src="{{ site.baseurl }}{{ category.logo }}" alt="{{ logo_alt }}">
+      {% endif %}
+      {{ category.name }}
+    </a>
+  {% endif %}
+{% endfor %}
 </div>
-</div>	
 
 
 
